// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TextareaField /> > Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_textarea-field_7bfcbf w-[384px]"
  >
    <div
      class="_textarea-field__overline_7bfcbf"
    >
      <label
        class="_label_76755a _label--md_76755a"
        for=":r0:"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Textarea Field
        </span>
      </label>
    </div>
    <textarea
      aria-describedby=""
      class="_textarea_7bfcbf"
      id=":r0:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
  </div>
</div>
`;

exports[`<TextareaField /> > WhenDefaultStatus story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_textarea-field_7bfcbf w-[384px]"
  >
    <div
      class="_textarea-field__overline_7bfcbf"
    >
      <label
        class="_label_76755a _label--md_76755a"
        for=":rf:"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="_textarea-field__subLabel_7bfcbf"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
          id=":rh:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rh: :rg:"
      class="_textarea_7bfcbf"
      id=":rf:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="_textarea-field__footer_7bfcbf"
    >
      <div
        class="_field-note_fd2e78 _textarea-field__field-note_7bfcbf"
        id=":rg:"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
        >
          Text should be at least 100 characters
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> > WhenDisabled story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_textarea-field_7bfcbf w-[384px]"
  >
    <div
      class="_textarea-field__overline_7bfcbf _textarea-field__overline--disabled_7bfcbf"
    >
      <label
        class="_label_76755a _label--md_76755a _textarea-field__label--disabled_7bfcbf"
        for=":r9:"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="_textarea-field__subLabel_7bfcbf _textarea-field__label--disabled_7bfcbf"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
          id=":rb:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rb: :ra:"
      aria-disabled="true"
      class="_textarea_7bfcbf _textarea--disabled_7bfcbf"
      disabled=""
      id=":r9:"
      placeholder="Enter long-form text here"
      rows="2"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="_textarea-field__footer_7bfcbf"
    >
      <div
        aria-disabled="true"
        class="_field-note_fd2e78 _field-note--disabled_fd2e78 _textarea-field__field-note_7bfcbf"
        id=":ra:"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> > WhenError story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_textarea-field_7bfcbf w-[384px]"
  >
    <div
      class="_textarea-field__overline_7bfcbf"
    >
      <label
        class="_label_76755a _label--md_76755a"
        for=":ri:"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="_textarea-field__subLabel_7bfcbf"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
          id=":rk:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rk: :rj:"
      class="_textarea_7bfcbf _error_7bfcbf"
      id=":ri:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="_textarea-field__footer_7bfcbf"
    >
      <div
        class="_field-note_fd2e78 _field-note--error_fd2e78 _textarea-field__field-note_7bfcbf"
        id=":rj:"
      >
        <svg
          class="_icon_779da8 _field-note__icon_fd2e78"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M12.573 16.4962C12.7295 16.3397 12.8078 16.1487 12.8078 15.923C12.8078 15.6973 12.7295 15.5063 12.573 15.35C12.4167 15.1937 12.2257 15.1155 12 15.1155C11.7743 15.1155 11.5833 15.1937 11.427 15.35C11.2705 15.5063 11.1923 15.6973 11.1923 15.923C11.1923 16.1487 11.2705 16.3397 11.427 16.4962C11.5833 16.6526 11.7743 16.7307 12 16.7307C12.2257 16.7307 12.4167 16.6526 12.573 16.4962ZM11.25 13.077H12.75V7.077H11.25V13.077ZM12.0018 21.5C10.6878 21.5 9.45267 21.2507 8.2965 20.752C7.14033 20.2533 6.13467 19.5766 5.2795 18.7218C4.42433 17.8669 3.74725 16.8617 3.24825 15.706C2.74942 14.5503 2.5 13.3156 2.5 12.0018C2.5 10.6878 2.74933 9.45267 3.248 8.2965C3.74667 7.14033 4.42342 6.13467 5.27825 5.2795C6.13308 4.42433 7.13833 3.74725 8.294 3.24825C9.44967 2.74942 10.6844 2.5 11.9982 2.5C13.3123 2.5 14.5473 2.74933 15.7035 3.248C16.8597 3.74667 17.8653 4.42342 18.7205 5.27825C19.5757 6.13308 20.2528 7.13833 20.7518 8.294C21.2506 9.44967 21.5 10.6844 21.5 11.9982C21.5 13.3123 21.2507 14.5473 20.752 15.7035C20.2533 16.8597 19.5766 17.8653 18.7218 18.7205C17.8669 19.5757 16.8617 20.2528 15.706 20.7518C14.5503 21.2506 13.3156 21.5 12.0018 21.5Z"
          />
        </svg>
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
        >
          Text should be at least 100 characters
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> > WhenNoDefaultValue story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_textarea-field_7bfcbf w-[384px]"
  >
    <div
      class="_textarea-field__overline_7bfcbf"
    >
      <label
        class="_label_76755a _label--md_76755a"
        for=":r3:"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="_textarea-field__subLabel_7bfcbf"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
          id=":r5:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r5:"
      class="_textarea_7bfcbf"
      id=":r3:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    />
  </div>
</div>
`;

exports[`<TextareaField /> > WhenOptional story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_textarea-field_7bfcbf w-[384px]"
  >
    <div
      class="_textarea-field__overline_7bfcbf"
    >
      <label
        class="_label_76755a _label--md_76755a"
        for=":rr:"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Textarea Field
        </span>
      </label>
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3 _textarea-field__hint_7bfcbf"
      >
        (Optional)
      </span>
      <div
        class="_textarea-field__subLabel_7bfcbf"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
          id=":rt:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rt: :rs:"
      class="_textarea_7bfcbf"
      id=":rr:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="_textarea-field__footer_7bfcbf"
    >
      <div
        class="_field-note_fd2e78 _textarea-field__field-note_7bfcbf"
        id=":rs:"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> > WhenReadOnly story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_textarea-field_7bfcbf w-[384px]"
  >
    <div
      class="_textarea-field__overline_7bfcbf"
    >
      <label
        class="_label_76755a _label--md_76755a"
        for=":rc:"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="_textarea-field__subLabel_7bfcbf"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
          id=":re:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":re: :rd:"
      class="_textarea_7bfcbf _textarea-field__textarea--read-only_7bfcbf"
      id=":rc:"
      placeholder="Enter long-form text here"
      readonly=""
      rows="2"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="_textarea-field__footer_7bfcbf"
    >
      <div
        class="_field-note_fd2e78 _textarea-field__field-note_7bfcbf"
        id=":rd:"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> > WhenRequired story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_textarea-field_7bfcbf w-[384px]"
  >
    <div
      class="_textarea-field__overline_7bfcbf"
    >
      <label
        class="_label_76755a _label--md_76755a"
        for=":ro:"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Textarea Field
        </span>
      </label>
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3 _textarea-field__hint_7bfcbf"
      >
        (Required)
      </span>
      <div
        class="_textarea-field__subLabel_7bfcbf"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
          id=":rq:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rq: :rp:"
      class="_textarea_7bfcbf"
      id=":ro:"
      placeholder="Enter long-form text here"
      required=""
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="_textarea-field__footer_7bfcbf"
    >
      <div
        class="_field-note_fd2e78 _textarea-field__field-note_7bfcbf"
        id=":rp:"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> > WhenUsingValue story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_textarea-field_7bfcbf w-[384px]"
  >
    <div
      class="_textarea-field__overline_7bfcbf"
    >
      <label
        class="_label_76755a _label--md_76755a"
        for=":r6:"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="_textarea-field__subLabel_7bfcbf"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
          id=":r8:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r8:"
      class="_textarea_7bfcbf"
      id=":r6:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
  </div>
</div>
`;

exports[`<TextareaField /> > WhenWarning story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_textarea-field_7bfcbf w-[384px]"
  >
    <div
      class="_textarea-field__overline_7bfcbf"
    >
      <label
        class="_label_76755a _label--md_76755a"
        for=":rl:"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="_textarea-field__subLabel_7bfcbf"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
          id=":rn:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rn: :rm:"
      class="_textarea_7bfcbf _warning_7bfcbf"
      id=":rl:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="_textarea-field__footer_7bfcbf"
    >
      <div
        class="_field-note_fd2e78 _field-note--warning_fd2e78 _textarea-field__field-note_7bfcbf"
        id=":rm:"
      >
        <svg
          class="_icon_779da8 _field-note__icon_fd2e78"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            warning
          </title>
          <path
            d="M1.86548 20.5L12 3L22.1345 20.5H1.86548ZM12.573 17.573C12.7295 17.4167 12.8077 17.2257 12.8077 17C12.8077 16.7743 12.7295 16.5833 12.573 16.427C12.4166 16.2705 12.2256 16.1923 12 16.1923C11.7743 16.1923 11.5833 16.2705 11.427 16.427C11.2705 16.5833 11.1922 16.7743 11.1922 17C11.1922 17.2257 11.2705 17.4167 11.427 17.573C11.5833 17.7295 11.7743 17.8078 12 17.8078C12.2256 17.8078 12.4166 17.7295 12.573 17.573ZM11.25 15.1923H12.75V10.1923H11.25V15.1923Z"
          />
        </svg>
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
        >
          Text should be at least 100 characters
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> > WithADifferentSize story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_textarea-field_7bfcbf w-[384px]"
  >
    <div
      class="_textarea-field__overline_7bfcbf"
    >
      <label
        class="_label_76755a _label--md_76755a"
        for=":ru:"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="_textarea-field__subLabel_7bfcbf"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
          id=":r10:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r10: :rv:"
      class="_textarea_7bfcbf"
      id=":ru:"
      placeholder="Enter long-form text here"
      rows="10"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="_textarea-field__footer_7bfcbf"
    >
      <div
        class="_field-note_fd2e78 _textarea-field__field-note_7bfcbf"
        id=":rv:"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> > WithAMaxLength story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_textarea-field_7bfcbf w-[384px]"
  >
    <div
      class="_textarea-field__overline_7bfcbf"
    >
      <label
        class="_label_76755a _label--md_76755a"
        for=":r11:"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Textarea Field
        </span>
      </label>
      <p
        class="_text_b3eba3 _text--body-sm_b3eba3 _textarea-field__character-counter_7bfcbf"
      >
        <span
          class="_textarea-field--invalid-length_7bfcbf"
        >
          202
        </span>
         
        / 
        144
      </p>
      <div
        class="_textarea-field__subLabel_7bfcbf"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
          id=":r13:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r13: :r12:"
      class="_textarea_7bfcbf _error_7bfcbf"
      id=":r11:"
      maxlength="144"
      placeholder="Enter long-form text here"
      required=""
      rows="10"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="_textarea-field__footer_7bfcbf"
    >
      <div
        class="_field-note_fd2e78 _field-note--error_fd2e78 _textarea-field__field-note_7bfcbf"
        id=":r12:"
      >
        <svg
          class="_icon_779da8 _field-note__icon_fd2e78"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M12.573 16.4962C12.7295 16.3397 12.8078 16.1487 12.8078 15.923C12.8078 15.6973 12.7295 15.5063 12.573 15.35C12.4167 15.1937 12.2257 15.1155 12 15.1155C11.7743 15.1155 11.5833 15.1937 11.427 15.35C11.2705 15.5063 11.1923 15.6973 11.1923 15.923C11.1923 16.1487 11.2705 16.3397 11.427 16.4962C11.5833 16.6526 11.7743 16.7307 12 16.7307C12.2257 16.7307 12.4167 16.6526 12.573 16.4962ZM11.25 13.077H12.75V7.077H11.25V13.077ZM12.0018 21.5C10.6878 21.5 9.45267 21.2507 8.2965 20.752C7.14033 20.2533 6.13467 19.5766 5.2795 18.7218C4.42433 17.8669 3.74725 16.8617 3.24825 15.706C2.74942 14.5503 2.5 13.3156 2.5 12.0018C2.5 10.6878 2.74933 9.45267 3.248 8.2965C3.74667 7.14033 4.42342 6.13467 5.27825 5.2795C6.13308 4.42433 7.13833 3.74725 8.294 3.24825C9.44967 2.74942 10.6844 2.5 11.9982 2.5C13.3123 2.5 14.5473 2.74933 15.7035 3.248C16.8597 3.74667 17.8653 4.42342 18.7205 5.27825C19.5757 6.13308 20.2528 7.13833 20.7518 8.294C21.2506 9.44967 21.5 10.6844 21.5 11.9982C21.5 13.3123 21.2507 14.5473 20.752 15.7035C20.2533 16.8597 19.5766 17.8653 18.7218 18.7205C17.8669 19.5757 16.8617 20.2528 15.706 20.7518C14.5503 21.2506 13.3156 21.5 12.0018 21.5Z"
          />
        </svg>
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> > WithARecommendedLength story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_textarea-field_7bfcbf w-[384px]"
  >
    <div
      class="_textarea-field__overline_7bfcbf"
    >
      <label
        class="_label_76755a _label--md_76755a"
        for=":r14:"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Textarea Field
        </span>
      </label>
      <p
        class="_text_b3eba3 _text--body-sm_b3eba3 _textarea-field__character-counter_7bfcbf"
      >
        <span
          class="_textarea-field--invalid-length_7bfcbf"
        >
          202
        </span>
         
        / 
        144
      </p>
      <div
        class="_textarea-field__subLabel_7bfcbf"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
          id=":r16:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r16: :r15:"
      class="_textarea_7bfcbf _error_7bfcbf"
      id=":r14:"
      placeholder="Enter long-form text here"
      required=""
      rows="10"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="_textarea-field__footer_7bfcbf"
    >
      <div
        class="_field-note_fd2e78 _field-note--error_fd2e78 _textarea-field__field-note_7bfcbf"
        id=":r15:"
      >
        <svg
          class="_icon_779da8 _field-note__icon_fd2e78"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M12.573 16.4962C12.7295 16.3397 12.8078 16.1487 12.8078 15.923C12.8078 15.6973 12.7295 15.5063 12.573 15.35C12.4167 15.1937 12.2257 15.1155 12 15.1155C11.7743 15.1155 11.5833 15.1937 11.427 15.35C11.2705 15.5063 11.1923 15.6973 11.1923 15.923C11.1923 16.1487 11.2705 16.3397 11.427 16.4962C11.5833 16.6526 11.7743 16.7307 12 16.7307C12.2257 16.7307 12.4167 16.6526 12.573 16.4962ZM11.25 13.077H12.75V7.077H11.25V13.077ZM12.0018 21.5C10.6878 21.5 9.45267 21.2507 8.2965 20.752C7.14033 20.2533 6.13467 19.5766 5.2795 18.7218C4.42433 17.8669 3.74725 16.8617 3.24825 15.706C2.74942 14.5503 2.5 13.3156 2.5 12.0018C2.5 10.6878 2.74933 9.45267 3.248 8.2965C3.74667 7.14033 4.42342 6.13467 5.27825 5.2795C6.13308 4.42433 7.13833 3.74725 8.294 3.24825C9.44967 2.74942 10.6844 2.5 11.9982 2.5C13.3123 2.5 14.5473 2.74933 15.7035 3.248C16.8597 3.74667 17.8653 4.42342 18.7205 5.27825C19.5757 6.13308 20.2528 7.13833 20.7518 8.294C21.2506 9.44967 21.5 10.6844 21.5 11.9982C21.5 13.3123 21.2507 14.5473 20.752 15.7035C20.2533 16.8597 19.5766 17.8653 18.7218 18.7205C17.8669 19.5757 16.8617 20.2528 15.706 20.7518C14.5503 21.2506 13.3156 21.5 12.0018 21.5Z"
          />
        </svg>
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> > WithBothRecommendedAndMaxLengths story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_textarea-field_7bfcbf w-[384px]"
  >
    <div
      class="_textarea-field__overline_7bfcbf"
    >
      <label
        class="_label_76755a _label--md_76755a"
        for=":r17:"
      >
        <span
          class="_text_b3eba3 _text--label-md_b3eba3"
        >
          Textarea Field
        </span>
      </label>
      <p
        class="_text_b3eba3 _text--body-sm_b3eba3 _textarea-field__character-counter_7bfcbf"
      >
        <span
          class="_textarea-field--invalid-length_7bfcbf"
        >
          202
        </span>
         
        / 
        144
      </p>
      <div
        class="_textarea-field__subLabel_7bfcbf"
      >
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
          id=":r19:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r19: :r18:"
      class="_textarea_7bfcbf _error_7bfcbf"
      id=":r17:"
      maxlength="256"
      placeholder="Enter long-form text here"
      required=""
      rows="10"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="_textarea-field__footer_7bfcbf"
    >
      <div
        class="_field-note_fd2e78 _field-note--error_fd2e78 _textarea-field__field-note_7bfcbf"
        id=":r18:"
      >
        <svg
          class="_icon_779da8 _field-note__icon_fd2e78"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M12.573 16.4962C12.7295 16.3397 12.8078 16.1487 12.8078 15.923C12.8078 15.6973 12.7295 15.5063 12.573 15.35C12.4167 15.1937 12.2257 15.1155 12 15.1155C11.7743 15.1155 11.5833 15.1937 11.427 15.35C11.2705 15.5063 11.1923 15.6973 11.1923 15.923C11.1923 16.1487 11.2705 16.3397 11.427 16.4962C11.5833 16.6526 11.7743 16.7307 12 16.7307C12.2257 16.7307 12.4167 16.6526 12.573 16.4962ZM11.25 13.077H12.75V7.077H11.25V13.077ZM12.0018 21.5C10.6878 21.5 9.45267 21.2507 8.2965 20.752C7.14033 20.2533 6.13467 19.5766 5.2795 18.7218C4.42433 17.8669 3.74725 16.8617 3.24825 15.706C2.74942 14.5503 2.5 13.3156 2.5 12.0018C2.5 10.6878 2.74933 9.45267 3.248 8.2965C3.74667 7.14033 4.42342 6.13467 5.27825 5.2795C6.13308 4.42433 7.13833 3.74725 8.294 3.24825C9.44967 2.74942 10.6844 2.5 11.9982 2.5C13.3123 2.5 14.5473 2.74933 15.7035 3.248C16.8597 3.74667 17.8653 4.42342 18.7205 5.27825C19.5757 6.13308 20.2528 7.13833 20.7518 8.294C21.2506 9.44967 21.5 10.6844 21.5 11.9982C21.5 13.3123 21.2507 14.5473 20.752 15.7035C20.2533 16.8597 19.5766 17.8653 18.7218 18.7205C17.8669 19.5757 16.8617 20.2528 15.706 20.7518C14.5503 21.2506 13.3156 21.5 12.0018 21.5Z"
          />
        </svg>
        <span
          class="_text_b3eba3 _text--body-sm_b3eba3"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;
